# Chip8

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Threading_ideas.drawio  log
debug/: chip8.a1  chip8.s1  debugger.a1  debugger.s1  files.txt  gui.a1  gui.s1  isa.a1  isa.s1  main.a1  main.c.snalyzerinfo  main.s1  stack.a1  stack.s1  test.a1  test.s1
include/: chip8.h  debugger.h  gui.h  isa.h  stack.h
ref/: 2023-12-03 21-42-49.mkv
roms/: 1-chip8-logo.ch8  F555Test.ch8  testing.ch8
src/: chip8.c  debugger.c  gui.c  isa.c  main.c  stack.c  test.c
